# jez-face-recognition-api

./: .env.example  .gitignore  DATABASE_CONFIG.md  DATABASE_INFO.txt  Dockerfile  FACE_REGISTRATION_DOCUMENTATION.md  IMPLEMENTATION_DEEPFACE.md  IMPLEMENTATION_GUIDE.md  INTEGRATION_GUIDE.md  README.md  REGISTRATION_WORKFLOW.md  SETUP_COMPLETE.md  WORKFLOW_COMPLETE_SUMMARY.md  config.py  download_models.py  face_recognition_service.py  laravel_sync.py  main.py  main_alternative.py  pyproject.toml  requirements.txt  setup.sh  start.sh  start_server.sh  test_api.sh  test_deepface.py
docs/: api.md  architecture.md  improvements.md  migration-insightface.md  operations.md  production-runbook.md
scripts/: setup.sh  smoke_test.sh  start.sh
src/jez_face_api/: app.py  cache.py  config.py  schemas.py  security.py
src/jez_face_api/integrations/: __init__.py  laravel.py
src/jez_face_api/recognition/: __init__.py  base.py  insightface_backend.py  matching.py
src/jez_face_api/routes/: faces.py  health.py
tests/: test_api_contract.py  test_matching.py  test_security.py
